gcloud/kubernetes/backend-linux.yaml
apiVersion: v1
kind: List
items:
- apiVersion: extensions/v1beta1
  kind: Deployment
  metadata:
    name: livegrep-backend-linux
  spec:
    replicas: 1
    template:
      metadata:
        labels:
          app: livegrep-backend
          backend: linux
      spec:
        containers:
        - args:
            - '/livegrep/bin/livegrep-serve-index'
            - 'linux'
            - '-threads=3'
          name: backend-linux
          image: us.gcr.io/livegrep/backend:3d308220f8-2
          resources:
            requests:
              cpu: 1
              memory: 6G
          terminationMessagePath: /dev/termination-log
          volumeMounts:
          - mountPath: /var/run/secrets/gcp
            name: gcp
            readOnly: true
            readOnly: true
          ports:
            - containerPort: 9898
        dnsPolicy: ClusterFirst
        volumes:
        - name: gcp
          secret:
            defaultMode: 0644
            secretName: gcp.livegrep-indexer
- apiVersion: v1
  kind: Service
  metadata:
    name: livegrep-backend-linux
  spec:
    ports:
    - port: 9898
      protocol: TCP
    selector:
      backend: linux
