gcloud/kubernetes/frontend.yaml
apiVersion: v1
kind: List
items:
- apiVersion: extensions/v1beta1
  kind: Deployment
  metadata:
    name: livegrep-frontend
  spec:
    replicas: 1
    strategy:
      type: RollingUpdate
      rollingUpdate:
        maxUnavailable: 1
    template:
      metadata:
        labels:
          app: livegrep-frontend
      spec:
        containers:
        - args: ['/livegrep/bin/livegrep', '/livegrep/conf/livegrep.json']
          name: livegrep
          image: docker.io/livegrep/frontend:b1193df7fd-0
          resources:
            requests:
              cpu: 100m
              memory: 100M
          terminationMessagePath: /dev/termination-log
          readinessProbe:
            httpGet:
              path: /debug/healthcheck
              port: 8910
            periodSeconds: 1
            timeoutSeconds: 1
            successThreshold: 1
            failureThreshold: 10
        - name: nginx
          image: docker.io/livegrep/nginx:b1193df7fd-0
          resources:
            requests:
              cpu: 100m
              memory: 100M
          terminationMessagePath: /dev/termination-log
          ports:
            - containerPort: 80
          readinessProbe:
            httpGet:
              path: /debug/healthcheck
              port: 80
            periodSeconds: 1
            timeoutSeconds: 1
            successThreshold: 1
            failureThreshold: 10
        dnsPolicy: ClusterFirst
- apiVersion: v1
  kind: Service
  metadata:
    name: livegrep-frontend
  spec:
    type: NodePort
    ports:
      - port: 80
    selector:
      app: livegrep-frontend
- apiVersion: extensions/v1beta1
  kind: Ingress
  metadata:
    name: livegrep
    annotations:
      stable.k8s.psg.io/kcm.enabled: "true"
      stable.k8s.psg.io/kcm.provider: "googlecloud"
      stable.k8s.psg.io/kcm.email: "nelhage@nelhage.com"
  spec:
    tls:
      - hosts: [ beta.livegrep.com ]
        secretName: beta.livegrep.com
    backend:
      serviceName: livegrep-frontend
      servicePort: 80
